--- a/styles/details.css
+++ b/styles/details.css
@@ -1,17 +1,24 @@
 .details {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
 }
 
 .detail--column {
-    flex-basis: 24%;
-    margin: 0 2rem;
-    padding: 1rem;
-    border: 1px dotted goldenrod;
+	flex-basis: 24%;
+	margin: 0 2rem;
+	padding: 1rem;
+	border: 1px dotted goldenrod;
 }
 
 .orders {
-    font-size: 20rem;
+	display: flex;
+	justify-content: center;
+	margin-top: 1rem;
+	font-size: 1rem;
 }
 
+.orders-title {
+	display: flex;
+	justify-content: center;
+}
