--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import "detail.css";
+@import "details.css";
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 
 /*Typography
@@ -14,8 +14,12 @@ textarea {
 	line-height: 1.5;
 }
 
-h1,h2,h3,h4,h5,h6 {
-  font-family: "Patua One", serif;
-  letter-spacing: 2px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: "Patua One", serif;
+	letter-spacing: 2px;
 }
-
